fix hrefs, remove temp spacing and temp remove navigation (whilst building)

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ font-family: 'Cormorant Unicase', serif;
   background-color: #d7c8b1;
   color: #333;
 }
+.navbar {
+  background-color: #d7c8b1;
+  /*color: #d7c8b1;*/
+}
 
 /* Override Bulma's default button color */
 .button {
